# Manufacutring-Agent

./: README.md
Manufacturing-Agent/: README.md  pyproject.toml
Manufacturing-Agent/backend/: main.py  step_parser.py
Manufacturing-Agent/backend/.ipynb_checkpoints/: main-checkpoint.py
Manufacturing-Agent/backend/agents/: classifier.py  decision.py  reporter.py
Manufacturing-Agent/backend/agents/.ipynb_checkpoints/: classifier-checkpoint.py  matcher-checkpoint.py
Manufacturing-Agent/demo/sample_parts/: test_part.step
frontend/: .env.example  package-lock.json  package.json
frontend/app/: globals.css  page.tsx
frontend/app/analyze/: page.tsx
frontend/components/analyze/: analysis-result.tsx  analyze-form.tsx  loading-state.tsx  status-badge.tsx  upload-zone.tsx
frontend/components/landing/: cta.tsx  dashboard-preview.tsx  features.tsx  footer.tsx  hero.tsx  navbar.tsx  workflow.tsx
frontend/components/ui/: input.tsx
frontend/hooks/: use-analyze.ts
frontend/lib/: api.ts  types.ts
